Update to Java 12 / removed haproxy due to core update